@@ -4,11 +4,10 @@
 2 = BOTTOM
 3 = USERS_LOGIN_BOX
 4 = NOTES_REMINDER
-5 = CATEGORIES_ADMIN_MENU
-6 = SEARCH_SEARCH_BOX
-7 = MENU_MENU_1
-8 = BREADCRUMB_VIEW
-9 = TOP_MENU
+5 = SEARCH_SEARCH_BOX
+6 = MENU_MENU_1
+7 = BREADCRUMB_VIEW
+8 = TOP_MENU
 
 [locked]
 ignore = 0,1,3,4,5,6,7,8
