@@ -3,10 +3,9 @@
 1 = LAYOUT_FOOTER
 2 = USERS_LOGIN_BOX
 3 = NOTES_REMINDER
-4 = CATEGORIES_ADMIN_MENU
-5 = SEARCH_SEARCH_BOX
-6 = MENU_MENU_1
-7 = BREADCRUMB_VIEW
+4 = SEARCH_SEARCH_BOX
+5 = MENU_MENU_1
+6 = BREADCRUMB_VIEW
 
 ; Persistent style sheet
 ; indicated by not having a title
