@@ -3,11 +3,10 @@
 1 = LAYOUT_FOOTER
 2 = USERS_LOGIN_BOX
 3 = NOTES_REMINDER
-4 = CATEGORIES_ADMIN_MENU
-5 = SEARCH_SEARCH_BOX
-6 = MENU_MENU_1
-7 = BREADCRUMB_VIEW
-8 = RIGHT_PANEL
+4 = SEARCH_SEARCH_BOX
+5 = MENU_MENU_1
+6 = BREADCRUMB_VIEW
+7 = RIGHT_PANEL
 
 [locked]
 ignore = 0,1,2,3,4,5,6,7
